--- a/src/resources/scss/reponsive.scss
+++ b/src/resources/scss/reponsive.scss
@@ -20,6 +20,10 @@
     display: block;
   }
 
+  .full-width-on-tablet-mobile {
+    width: 100%;
+  }
+
   .header__icon-tablet-mobile .header-icon__down {
     display: none;
   }
