--- a/src/resources/views/partials/header.hbs
+++ b/src/resources/views/partials/header.hbs
@@ -1,8 +1,8 @@
 <div class="header">
 <div class="grid wide">
     <nav class="nav-bar">
-    <a href="#"
-        ><img src="/img/logo.png" alt="" class="header__logo"
+    <a href="home"
+        ><img src="/img/logo1.png" alt="" class="header__logo"
     /></a>
     <ul class="header-list hide-on-tablet-mobile">
         <li class="header-list__item">
