--- a/src/resources/views/user/question.hbs
+++ b/src/resources/views/user/question.hbs
@@ -82,7 +82,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="postItem__body wrap__reverse-mobile">
+                        <a href="#" class="postItem__body wrap__reverse-mobile">
                             <div class="postItem__info">
                                 <h1 class="postItem__info-title">C#(.NET) - Tương tác với file Excel C#(.NET)</h1>
                                 <span>Bạn có kiến thức ngôn ngữ C#! Bạn muốn thực hiện tương tác với file excel. muốn thực hiện tương tác với file excel. muốn asdasd</span>
@@ -95,7 +95,7 @@
                             <div class="postItem__thumb">
                                 <img src="https://cdn.fullstack.edu.vn/f8-learning/blog_posts/309/614182e1e2cdc.jpg" alt="" class="postItem__thumb-img">
                             </div>
-                        </div>
+                        </a>
                     </div>
                 </div>
                 <div class="col l-8 c-12">
@@ -142,7 +142,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="postItem__body wrap__reverse-mobile">
+                        <a href="#" class="postItem__body wrap__reverse-mobile">
                             <div class="postItem__info">
                                 <h1 class="postItem__info-title">C#(.NET) - Tương tác với file Excel C#(.NET)</h1>
                                 <span>Bạn có kiến thức ngôn ngữ C#! Bạn muốn thực hiện tương tác với file excel. muốn thực hiện tương tác với file excel. muốn asdasd</span>
@@ -155,7 +155,7 @@
                             <div class="postItem__thumb">
                                 <img src="https://cdn.fullstack.edu.vn/f8-learning/blog_posts/309/614182e1e2cdc.jpg" alt="" class="postItem__thumb-img">
                             </div>
-                        </div>
+                        </a>
                     </div>
                 </div>
                 <div class="col l-8 c-12">
@@ -202,7 +202,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="postItem__body wrap__reverse-mobile">
+                        <a href="#" class="postItem__body wrap__reverse-mobile">
                             <div class="postItem__info">
                                 <h1 class="postItem__info-title">C#(.NET) - Tương tác với file Excel C#(.NET)</h1>
                                 <span>Bạn có kiến thức ngôn ngữ C#! Bạn muốn thực hiện tương tác với file excel. muốn thực hiện tương tác với file excel. muốn asdasd</span>
@@ -215,7 +215,7 @@
                             <div class="postItem__thumb">
                                 <img src="https://cdn.fullstack.edu.vn/f8-learning/blog_posts/309/614182e1e2cdc.jpg" alt="" class="postItem__thumb-img">
                             </div>
-                        </div>
+                        </a>
                     </div>
                 </div>
                 <div class="col l-8 c-12">
@@ -262,7 +262,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="postItem__body wrap__reverse-mobile">
+                        <a href="#" class="postItem__body wrap__reverse-mobile">
                             <div class="postItem__info">
                                 <h1 class="postItem__info-title">C#(.NET) - Tương tác với file Excel C#(.NET)</h1>
                                 <span>Bạn có kiến thức ngôn ngữ C#! Bạn muốn thực hiện tương tác với file excel. muốn thực hiện tương tác với file excel. muốn asdasd</span>
@@ -275,7 +275,7 @@
                             <div class="postItem__thumb">
                                 <img src="https://cdn.fullstack.edu.vn/f8-learning/blog_posts/309/614182e1e2cdc.jpg" alt="" class="postItem__thumb-img">
                             </div>
-                        </div>
+                        </a>
                     </div>
                 </div>
                 <div class="col l-8 c-12">
@@ -322,7 +322,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="postItem__body wrap__reverse-mobile">
+                        <a href="#" class="postItem__body wrap__reverse-mobile">
                             <div class="postItem__info">
                                 <h1 class="postItem__info-title">C#(.NET) - Tương tác với file Excel C#(.NET)</h1>
                                 <span>Bạn có kiến thức ngôn ngữ C#! Bạn muốn thực hiện tương tác với file excel. muốn thực hiện tương tác với file excel. muốn asdasd</span>
@@ -335,7 +335,7 @@
                             <div class="postItem__thumb">
                                 <img src="https://cdn.fullstack.edu.vn/f8-learning/blog_posts/309/614182e1e2cdc.jpg" alt="" class="postItem__thumb-img">
                             </div>
-                        </div>
+                        </a>
                     </div>
                 </div>
                 <div class="col l-8 c-12">
@@ -382,7 +382,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="postItem__body wrap__reverse-mobile">
+                        <a href="#" class="postItem__body wrap__reverse-mobile">
                             <div class="postItem__info">
                                 <h1 class="postItem__info-title">C#(.NET) - Tương tác với file Excel C#(.NET)</h1>
                                 <span>Bạn có kiến thức ngôn ngữ C#! Bạn muốn thực hiện tương tác với file excel. muốn thực hiện tương tác với file excel. muốn asdasd</span>
@@ -395,7 +395,7 @@
                             <div class="postItem__thumb">
                                 <img src="https://cdn.fullstack.edu.vn/f8-learning/blog_posts/309/614182e1e2cdc.jpg" alt="" class="postItem__thumb-img">
                             </div>
-                        </div>
+                        </a>
                     </div>
                 </div>
                 <div class="col l-8 c-12">
@@ -442,7 +442,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="postItem__body wrap__reverse-mobile">
+                        <a href="#" class="postItem__body wrap__reverse-mobile">
                             <div class="postItem__info">
                                 <h1 class="postItem__info-title">C#(.NET) - Tương tác với file Excel C#(.NET)</h1>
                                 <span>Bạn có kiến thức ngôn ngữ C#! Bạn muốn thực hiện tương tác với file excel. muốn thực hiện tương tác với file excel. muốn asdasd</span>
@@ -455,7 +455,7 @@
                             <div class="postItem__thumb">
                                 <img src="https://cdn.fullstack.edu.vn/f8-learning/blog_posts/309/614182e1e2cdc.jpg" alt="" class="postItem__thumb-img">
                             </div>
-                        </div>
+                        </a>
                     </div>
                 </div>
                 <div class="col l-8 c-12">
@@ -502,7 +502,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="postItem__body wrap__reverse-mobile">
+                        <a href="#" class="postItem__body wrap__reverse-mobile">
                             <div class="postItem__info">
                                 <h1 class="postItem__info-title">C#(.NET) - Tương tác với file Excel C#(.NET)</h1>
                                 <span>Bạn có kiến thức ngôn ngữ C#! Bạn muốn thực hiện tương tác với file excel. muốn thực hiện tương tác với file excel. muốn asdasd</span>
@@ -515,7 +515,7 @@
                             <div class="postItem__thumb">
                                 <img src="https://cdn.fullstack.edu.vn/f8-learning/blog_posts/309/614182e1e2cdc.jpg" alt="" class="postItem__thumb-img">
                             </div>
-                        </div>
+                        </a>
                     </div>
                 </div>
                 <div class="col l-8 c-12">
@@ -562,7 +562,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="postItem__body wrap__reverse-mobile">
+                        <a href="#" class="postItem__body wrap__reverse-mobile">
                             <div class="postItem__info">
                                 <h1 class="postItem__info-title">C#(.NET) - Tương tác với file Excel C#(.NET)</h1>
                                 <span>Bạn có kiến thức ngôn ngữ C#! Bạn muốn thực hiện tương tác với file excel. muốn thực hiện tương tác với file excel. muốn asdasd</span>
@@ -575,7 +575,7 @@
                             <div class="postItem__thumb">
                                 <img src="https://cdn.fullstack.edu.vn/f8-learning/blog_posts/309/614182e1e2cdc.jpg" alt="" class="postItem__thumb-img">
                             </div>
-                        </div>
+                        </a>
                     </div>
                 </div>
                 <div class="col l-8 c-12">
@@ -622,7 +622,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="postItem__body wrap__reverse-mobile">
+                        <a href="#" class="postItem__body wrap__reverse-mobile">
                             <div class="postItem__info">
                                 <h1 class="postItem__info-title">C#(.NET) - Tương tác với file Excel C#(.NET)</h1>
                                 <span>Bạn có kiến thức ngôn ngữ C#! Bạn muốn thực hiện tương tác với file excel. muốn thực hiện tương tác với file excel. muốn asdasd</span>
@@ -635,7 +635,7 @@
                             <div class="postItem__thumb">
                                 <img src="https://cdn.fullstack.edu.vn/f8-learning/blog_posts/309/614182e1e2cdc.jpg" alt="" class="postItem__thumb-img">
                             </div>
-                        </div>
+                        </a>
                     </div>
                 </div>
                 <div class="col l-8 c-12">
@@ -682,7 +682,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="postItem__body wrap__reverse-mobile">
+                        <a href="#" class="postItem__body wrap__reverse-mobile">
                             <div class="postItem__info">
                                 <h1 class="postItem__info-title">C#(.NET) - Tương tác với file Excel C#(.NET)</h1>
                                 <span>Bạn có kiến thức ngôn ngữ C#! Bạn muốn thực hiện tương tác với file excel. muốn thực hiện tương tác với file excel. muốn asdasd</span>
@@ -695,7 +695,7 @@
                             <div class="postItem__thumb">
                                 <img src="https://cdn.fullstack.edu.vn/f8-learning/blog_posts/309/614182e1e2cdc.jpg" alt="" class="postItem__thumb-img">
                             </div>
-                        </div>
+                        </a>
                     </div>
                 </div>
                 <div class="col l-8 c-12">
@@ -742,7 +742,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="postItem__body wrap__reverse-mobile">
+                        <a href="#" class="postItem__body wrap__reverse-mobile">
                             <div class="postItem__info">
                                 <h1 class="postItem__info-title">C#(.NET) - Tương tác với file Excel C#(.NET)</h1>
                                 <span>Bạn có kiến thức ngôn ngữ C#! Bạn muốn thực hiện tương tác với file excel. muốn thực hiện tương tác với file excel. muốn asdasd</span>
@@ -755,7 +755,7 @@
                             <div class="postItem__thumb">
                                 <img src="https://cdn.fullstack.edu.vn/f8-learning/blog_posts/309/614182e1e2cdc.jpg" alt="" class="postItem__thumb-img">
                             </div>
-                        </div>
+                        </a>
                     </div>
                 </div>
                 <div class="col l-8 c-12">
@@ -802,7 +802,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="postItem__body wrap__reverse-mobile">
+                        <a href="#" class="postItem__body wrap__reverse-mobile">
                             <div class="postItem__info">
                                 <h1 class="postItem__info-title">C#(.NET) - Tương tác với file Excel C#(.NET)</h1>
                                 <span>Bạn có kiến thức ngôn ngữ C#! Bạn muốn thực hiện tương tác với file excel. muốn thực hiện tương tác với file excel. muốn asdasd</span>
@@ -815,7 +815,7 @@
                             <div class="postItem__thumb">
                                 <img src="https://cdn.fullstack.edu.vn/f8-learning/blog_posts/309/614182e1e2cdc.jpg" alt="" class="postItem__thumb-img">
                             </div>
-                        </div>
+                        </a>
                     </div>
                 </div>
             </div>
