--- a/src/public/css/base.css
+++ b/src/public/css/base.css
@@ -88,6 +88,30 @@ html {
   height: 5px;
   transition: all linear 1s; }
 
+.postItem__optionBtn-function {
+  position: absolute;
+  z-index: 6;
+  top: calc(100% + 13px);
+  right: 0;
+  height: auto;
+  width: 230px;
+  background-color: #fff;
+  box-shadow: 0 -4px 32px rgba(0, 0, 0, 0.3);
+  padding: 8px 0;
+  border-radius: 10px;
+  opacity: 0;
+  transform: scale(0);
+  transform-origin: top right;
+  transition: all linear 0.3s; }
+
+.postItem__optionBtn-function.open {
+  z-index: 6;
+  opacity: 1;
+  transform: scale(1); }
+
+.overlay__option.open {
+  display: block; }
+
 @keyframes FadeIn {
   from {
     opacity: 0; }
@@ -101,3 +125,11 @@ html {
   to {
     opacity: 1;
     transform: scale(1); } }
+
+@keyframes moveIcon {
+  from {
+    opacity: 0;
+    transform: translateY(50px); }
+  to {
+    opacity: 1;
+    transform: translateY(0); } }
