--- a/src/public/css/header.css
+++ b/src/public/css/header.css
@@ -5,7 +5,7 @@
   top: 20px;
   width: 100%;
   transition: all linear 0.3s;
-  z-index: 99; }
+  z-index: 9; }
 
 .nav-bar {
   height: var(--navbar-height);
@@ -17,8 +17,10 @@
   -webkit-tap-highlight-color: transparent; }
 
 .header__logo {
-  height: 65px;
-  padding: 0 16px; }
+  height: 150px;
+  padding: 0 16px;
+  position: relative;
+  bottom: 3px; }
 
 .header-list {
   display: flex;
@@ -63,6 +65,7 @@
 /*header on tablet mobile */
 .overlay {
   position: fixed;
+  z-index: 10;
   top: 0;
   left: 0;
   right: 0;
@@ -511,7 +514,7 @@
 
 .nav-bar-tablet-mobile {
   position: fixed;
-  z-index: 1;
+  z-index: 10;
   top: 0;
   right: 0;
   bottom: 0;
