--- a/src/resources/scss/header.scss
+++ b/src/resources/scss/header.scss
@@ -5,7 +5,7 @@
   top: 20px;
   width: 100%;
   transition: all linear 0.3s;
-  z-index: 99;
+  z-index: 9;
 }
 
 .nav-bar {
@@ -19,8 +19,10 @@
 }
 
 .header__logo {
-  height: 65px;
+  height: 150px;
   padding: 0 16px;
+  position: relative;
+  bottom: 3px;
 }
 
 .header-list {
@@ -74,6 +76,7 @@
 
 .overlay {
   position: fixed;
+  z-index: 10;
   top: 0;
   left: 0;
   right: 0;
@@ -587,7 +590,7 @@
 
 .nav-bar-tablet-mobile {
   position: fixed;
-  z-index: 1;
+  z-index: 10;
   top: 0;
   right: 0;
   bottom: 0;
