--- a/src/resources/scss/question.scss
+++ b/src/resources/scss/question.scss
@@ -20,10 +20,6 @@
   display: none;
 }
 
-.overlay__option.aaa {
-  display: block;
-}
-
 .question__content-separate {
   position: fixed;
   top: 0;
@@ -114,29 +110,6 @@
   opacity: 1;
 }
 
-.postItem__optionBtn-function {
-  position: absolute;
-  z-index: 6;
-  top: calc(100% + 13px);
-  right: 0;
-  height: auto;
-  width: 230px;
-  background-color: #fff;
-  box-shadow: 0 -4px 32px rgba(0, 0, 0 / 20%, 0.3);
-  padding: 8px 0;
-  border-radius: 10px;
-  opacity: 0;
-  transform: scale(0);
-  transform-origin: top right;
-  transition: all linear 0.3s;
-}
-
-.postItem__optionBtn-function.open {
-  z-index: 6;
-  opacity: 1;
-  transform: scale(1);
-}
-
 .tippy__wrapper-list {
   list-style: none;
 }
@@ -161,6 +134,8 @@
 .postItem__body {
   display: flex;
   justify-content: space-between;
+  text-decoration: none;
+  color: var(--primary-color);
 }
 
 .postItem__info {
