--- a/src/resources/views/layouts/main.hbs
+++ b/src/resources/views/layouts/main.hbs
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="/css/footer.css">
     <link rel="stylesheet" href="/css/app.css">
     <link rel="stylesheet" href="/css/news.css">
+    <link rel="stylesheet" href="/css/newsBlog.css">
     <link rel="stylesheet" href="/css/question.css">
     <link rel="stylesheet" href="/css/contact.css">
     <link rel="stylesheet" href="/css/grid.css">
@@ -27,8 +28,13 @@
     <!-- font popins -->
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300&display=swap" rel="stylesheet">
+    
+    {{!-- font montserrat of comment --}}
+    <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;500&display=swap" rel="stylesheet">
 </head>
 <body>
     <div class="main">
