--- a/src/resources/views/partials/header.hbs
+++ b/src/resources/views/partials/header.hbs
@@ -38,15 +38,17 @@
             </a>
             </li>
             <li class="menu-icon-down__item">
-            <a href="" class="menu-icon-down__item-link">
-                <i class="header-pc__icon-logout fas fa-sign-out-alt"></i>
-                Đăng Xuất
+            <a href="homeAdmin" class="menu-icon-down__item-link">
+                <i class="fas fa-user-shield"></i>
+                <span style="margin-left: 4px;">
+                    Quản lý
+                </span>
             </a>
             </li>
-            <li class="menu-icon-down__item">
-            <a href="admin" class="menu-icon-down__item-link">
+            <li class="menu-icon-down__item js-page-manager">
+            <a href="" class="menu-icon-down__item-link">
                 <i class="header-pc__icon-logout-setting fas fa-cog"></i>
-                Quản lý
+                Đăng Xuất
             </a>
             </li>
         </ul>
