--- a/src/resources/views/user/newsBlog.hbs
+++ b/src/resources/views/user/newsBlog.hbs
@@ -81,6 +81,18 @@
                             👉👉 Đăng ký khóa ReactJS miễn phí của mình tại: https://fullstack.edu.vn/courses/reactjs
                         </p>
                     </div>
+                    <div class="Reaction_wrapper">
+                        <div class="Reaction_btnReact">
+                            <i class="Reaction_btnReact-icon far fa-heart"></i>
+                            <span>0</span>
+                        </div>
+                        
+
+                        <label for="checkComment" class="Reaction_btnReact">
+                            <i class="Reaction_btnReact-icon far fa-comment"></i>
+                            <span>0</span>
+                        </label>
+                    </div>
                 </div>
                 <input type="checkbox" id="checkComment" class="checkk" hidden/>
                 <label for="checkComment" class="overlay js-overlay"></label>
@@ -170,10 +182,10 @@
                                     <div class="common-comment__blog-2">
                                         <div class="Comment_blog-tittle-body">
                                             <div class="CommentBox_commentWrapper">
-                                                <img src="/img/anh.png" alt="" class="postItem__author-img news-blog__postItem__author-img">
+                                                <img src="/img/anh.png" alt="" class="postItem__author-img news-blog__postItem__author-img news-blog__postItem__author-img-comment">
                                             </div>
                                             <div class="Comment_blog-tittle-input">
-                                                <textarea placeholder="Viết bình luận của bạn 2..."></textarea>
+                                                <textarea placeholder="Viết bình luận của bạn..."></textarea>
                                             </div>
                                             
                                         </div>
@@ -256,7 +268,7 @@
                                     <div class="common-comment__blog-3">
                                         <div class="Comment_blog-tittle-body Comment_blog-tittle-body-other">
                                             <div class="CommentBox_commentWrapper">
-                                                <img src="/img/anh.png" alt="" class="postItem__author-img news-blog__postItem__author-img">
+                                                <img src="/img/anh.png" alt="" class="postItem__author-img news-blog__postItem__author-img news-blog__postItem__author-img-comment">
                                             </div>
                                             <div class="Comment_blog-tittle-input">
                                                 <textarea placeholder="Viết bình luận của bạn..."></textarea>
@@ -273,8 +285,8 @@
                             </div>
                         </div>
                     </div>
+                    </div>
                 </div>
-            </div>
         </div>
     </div> 
 </div>
