--- a/src/resources/scss/reponsive.scss
+++ b/src/resources/scss/reponsive.scss
@@ -104,6 +104,16 @@
     display: block;
   }
 
+  // slide page home
+
+  .img-1,
+  .img-2,
+  .img-3,
+  .img-4,
+  .img-5 {
+    padding-top: 22%;
+  }
+
   .header-icon__bell {
     margin-right: 48px;
   }
@@ -144,6 +154,15 @@
   }
   /* icon heaeder */
 
+  // slide page home
+
+  .img-1,
+  .img-2,
+  .img-3,
+  .img-4,
+  .img-5 {
+    padding-top: 50%;
+  }
   .header-icon__bar {
     margin: 0 13px 0 20px;
     font-size: 2.4rem;
@@ -296,5 +315,40 @@
   }
   .news-post {
     padding: 0 4px;
+  }
+
+  .os-content {
+    padding: 0 8px 60px;
+  }
+
+  .Comment_blog-tittle-body-other {
+    width: 90%;
+    margin-left: 0;
+  }
+  .Comment_commentTime-other {
+    left: 0;
+    margin-left: 16px;
+  }
+  .text-other {
+    width: calc(116% - 2px);
+    margin-left: -46px;
+  }
+
+  .postItem__author-img.news-blog__postItem__author-img-comment {
+    width: 30px;
+    height: 30px;
+  }
+
+  .Comment_likeComment-item img {
+    height: 30px;
+    width: 30px;
+  }
+
+  .Comment_contentHeading {
+    margin: 60px 0 0;
+  }
+
+  .news-blog__question-content-title div:nth-child(2) {
+    font-size: 1.6rem;
   }
 }
